@@ -1,3 +1,10 @@
+2005-07-16 Adam Schreiber <sadam@clemson.edu>
+	* libseahorse/seahorse-prefs.glade:
+	* libseahorse/seahorse-prefs-cache.c: Patch from Jim Pharis
+	(bug #304714)
+	* libseahorse/seahorse-key-store.c: Patch for single key delete
+	from Flavio daCosta
+
 2005-07-11 Adam Schreiber <sadam@clemson.edu>
 	* help/C/seahorse.xml: Added text for Preferences(bug #309360)
 	
